--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todo-list-react",
+  "homepage": "https://helloSanmi.github.io/todo-list-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +15,7 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
@@ -27,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
